Table enhancement: Prevented overlapping of text and sorting buttons for narrow columns (fixes #3628)

--- a/src/js/sass/includes/_tables.scss
+++ b/src/js/sass/includes/_tables.scss
@@ -38,6 +38,7 @@ table {
 			th {
 				@extend %tables-border-bottom-1px-solid-black-font-weight-700;
 				@extend %tables-cursor-pointer;
+				padding-right: 30px;
 				&:active {
 					@extend %tables-outline-none;
 				}
